[gd_scene load_steps=5 format=3 uid="uid://2bcx7j6r8fym"]

[ext_resource type="Texture2D" uid="uid://ch5vt2ibuhik2" path="res://Assets/MichaelFace.png" id="1_o7ssi"]
[ext_resource type="Script" path="res://Scripts/dialogPanel.gd" id="1_suk2k"]

[sub_resource type="InputEventKey" id="InputEventKey_j5ee6"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_5jggr"]
events = [SubResource("InputEventKey_j5ee6")]

[node name="DialogContainer" type="MarginContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -294.0
offset_right = 294.0
offset_bottom = 113.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_suk2k")

[node name="AutoClose" type="Timer" parent="."]
one_shot = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MemberNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
text = "Party Member Name"

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 12
shortcut = SubResource("Shortcut_5jggr")
text = "Close Dialog (Space)"

[node name="Content" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MemberIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("1_o7ssi")
expand_mode = 3

[node name="MessageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Lorem ipsum dolor sit amet, consectLorem ipsum dolor sit amet, consectLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do e"
autowrap_mode = 2

[connection signal="timeout" from="AutoClose" to="." method="close"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/TopBar/CloseButton" to="." method="close"]
